add timeout support for command
